# aregrp

./: .gitignore  TextInput_fix_plan.md  api.json  docker-compose.yml  openapi.json
backend/: .cursorrules  .dockerignore  .env.example  .env.postgres.example  .gitignore  Dockerfile  README.md  db.sqlite3    docker-compose.yml  env.example  env.postgres.example  pyproject.toml  pytest.ini  ruff.toml
backend/api/: ERRORS.md  errors.py  router.py  schemas.py  urls.py
backend/apps/accounts/: admin.py  errors.py  models.py  urls.py  views.py
backend/apps/bookings/: admin.py  apps.py  errors.py  models.py  routers.py  schemas.py  services.py  tests.py
backend/apps/deals/: admin.py  errors.py  models.py  schemas.py  services.py
backend/apps/feedback/: admin.py  errors.py  models.py  routers.py  schemas.py  services.py
backend/apps/payments/: admin.py  apps.py  errors.py  models.py  routers.py  schemas.py  services.py  tests.py
backend/apps/re_objects/: STORAGE.md  admin.py  apps.py  availability.py  dev_routers.py  errors.py  models.py  routers.py  schemas.py  widgets.py
backend/apps/referrals/: admin.py  apps.py  models.py  routers.py  schemas.py  services.py  tests.py
backend/apps/site_settings/: admin.py  apps.py  errors.py  models.py  routers.py  schemas.py
backend/config/: settings.py  settings_test.py  urls.py
backend/core/: pagination.py
backend/docs/: floor-premises-module.md
backend/examples/: background.avif
backend/scripts/: export_openapi.py
backend/templates/accounts/: password_reset_email.html
backend/tests/: README.md  conftest.py
(+607 files in other folders)
